# OhMyOfferssss

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.external.yml  docker-compose.yml  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts
apps/api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: auth.py  groups.py  imports.py  interviews.py  question_banks.py  questions.py  resumes.py  router.py
apps/api/app/clients/: database.py  feishu.py  llm.py  redis.py
apps/api/app/core/: config.py  errors.py  middleware.py  security.py
apps/api/app/db/: session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/models/: __init__.py
apps/api/app/db/repositories/: groups.py  imports.py  interviews.py  question_banks.py  questions.py  resumes.py  users.py
apps/api/app/schemas/: auth.py  common.py  groups.py  imports.py  interviews.py  question_banks.py  questions.py  resumes.py  users.py
apps/api/app/services/auth/: service.py
apps/api/app/services/groups/: service.py
apps/api/app/services/imports/: service.py
apps/api/app/services/interviews/: service.py
apps/api/app/services/question_banks/: service.py
apps/api/app/services/questions/: service.py
apps/api/scripts/: check_connections.py  check_integrations.py  import_javaguide_markdown.py
apps/api/tests/: conftest.py  test_integrations.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py
docs/: deploy-ubuntu-docker.md  (+3 more)
(+115 files in other folders)
